cluster/apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prowlarr"
    gethomepage.dev/icon: prowlarr.svg
    gethomepage.dev/href: https://prowlarr.disablak.xyz
    gethomepage.dev/group: Media
    gethomepage.dev/pod-selector: "app=prowlarr"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prowlarr.disablak.xyz
      secretName: prowlarr-tls
  rules:
    - host: prowlarr.disablak.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
